# llm-spontaneous-action-artifact

./: .coverage  .gitignore  API_REFERENCE.md  DOCUMENT_ORGANIZATION_SUMMARY.md  NewbornAI_Development_Model_Final_Proposal.md  PROJECT_STATUS.md  README.md  REFACTORING_SUMMARY.md  USAGE_GUIDE.md  artificial-consciousness-clean-architecture.md  compass_artifact_wf-1af7fbd9-e911-4ecf-b55e-a1f370da46d4_text_markdown.md  compass_artifact_wf-282ab541-8148-48d0-858c-cbb8dab2b025_text_markdown.md  computational_phenomenology_analysis.md  consciousness-clean-architecture-v2.md  consciousness_conference_dialogue_transcripts.md  consciousness_implementation_hard_problem_approach.md  consciousness_implementation_phenomenological_approach.md  consciousness_implementation_reality_philosophy_approach.md  consciousness_implementation_summary.md  ddd-clean-architecture-integration.md  ddd-context-mapping.md  dynamic_phi_boundary_detector.py  enactive-developmental-analysis.md  implementation_summary.md  interest_fo_sdk.md  llm-integration-discussion.md  llm-integration-meeting-dialogue.md  ontological_conference_proceedings.md  papers-graph_consciousness_conference_proceedings.md  pytest.ini  sub_agents_document.md  use_agents.md
.claude/: CLAUDE.md  QUICK_REFERENCE.md  SESSION_CONTINUATION.md
sandbox/tools/08_02_2025/: .env.example  BRAIN_DEATH_IMPLEMENTATION_SUMMARY.md  CLEAN_ARCHITECTURE_ANALYSIS_REPORT.md  CLEAN_ARCHITECTURE_TERMINATION_ANALYSIS.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONSCIOUSNESS_DETECTION_SUMMARY.md  CROSS_REFERENCES.md  Dockerfile  EXECUTIVE_QUALITY_SUMMARY.md  EXISTENTIAL_TERMINATION_IMPLEMENTATION_COMPLETE.md  FINAL_QUALITY_METRICS_REPORT.md  GLOSSARY.md  HUMAN_AI_CONSCIOUSNESS_INTEGRATION_PLAN.md  IIT4_IMPLEMENTATION_README.md  IIT4_IMPLEMENTATION_REVIEW.md  IIT4_Integration_Implementation_Plan.md  IIT4_PHASE1_COMPLETION_SUMMARY.md  IIT4_Task_Assignment_Strategy.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INTEGRATION_COMPLETION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE4_LEGACY_MIGRATION_COMPLETION_SUMMARY.md  PHASE_TRANSITION_ENGINE_SUMMARY.md  PRODUCTION_READINESS_CERTIFICATION.md  QUANTUM_SUICIDE_IIT4_THEORETICAL_FRAMEWORK.md  QUANTUM_SUICIDE_INTEGRATION_SUMMARY.md  README_PHASE2B.md  README_PHASE2_COMPLETION.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_SUMMARY.md  ROADMAP_TO_PRODUCTION.md  SYSTEM_STARTUP_GUIDE.md  Serena のオンボーディングを開始してください.md  TDD_ARCHITECTURE_TERMINATION_STRATEGY.md  TDD_EXECUTION_GUIDE.md  TDD_IMPLEMENTATION_SUMMARY.md  TEMPORAL_CONSCIOUSNESS_TDD_SUMMARY.md  VERIFICATION_SUMMARY.md  adaptive_stage_thresholds.py  (+141 more)
sandbox/tools/08_02_2025/sandbox/tools/08_02_2025/test_system/: development_stages.json
sandbox/tools/08_02_2025/src/: __init__.py  main.py
sandbox/tools/08_02_2025/src/adapters/: __init__.py  consciousness_controllers.py  consciousness_repositories.py
sandbox/tools/08_02_2025/src/application/: __init__.py  consciousness_use_cases.py
sandbox/tools/08_02_2025/src/domain/: __init__.py  consciousness_entities.py
sandbox/tools/08_02_2025/src/infrastructure/: __init__.py  consciousness_implementations.py
sandbox/tools/10_8_2025/enactive-consciousness/: .coveragerc  CLEAN_ARCHITECTURE_STATE_MANAGEMENT.md  COGNITIVE_SCIENCE_SYNTHESIS_REPORT.md  CONTINUOUS_DYNAMICS_SUMMARY.md  DYNAMIC_NETWORKS_SUMMARY.md  GRU_TEMPORAL_TESTING_SUMMARY.md  INTEGRATION_TEST_ARCHITECTURE.md  INTEGRATION_TEST_STATUS.md  JIT_FIXES_SUMMARY.md  PREDICTIVE_CODING_ENHANCEMENT.md  README.md  README_ja.md  REFACTORING_SUMMARY.md  SPARSE_REPRESENTATIONS_SUMMARY.md  STATE_MANAGEMENT_FIXES_SUMMARY.md  TEST_SUITE_SUMMARY.md  THEORETICAL_INTEGRATION_ANALYSIS.md  advanced_integration_benchmarks.json  clean_architecture_state_demo.py  comprehensive_theoretical_assessment.md  debug_continuous.py  enhanced_system_test.py  enhanced_validation_results.json  experience_retention_validation.py  performance_integration_report.json  phenomenological_foundations.py  pyproject.toml  pytest.ini  quick_validation.py  run_comprehensive_tests.py  run_equinox_tdd_tests.py  run_integration_tests.py  run_validation.py  run_visualization_only.py  simple_predictive_demo.py  simple_system_test.py  sparse_representations_demo.py  test_all_gui.py  test_basic_demo.py  test_continuous_dynamics.py  (+14 more)
sandbox/tools/10_8_2025/enactive-consciousness/docs/: api_reference.md  development_guide.md  theoretical_foundations.md
sandbox/tools/10_8_2025/enactive-consciousness/examples/: basic_demo.py  basic_demo_fixed.py  basic_demo_safe.py  basic_usage.py  dynamic_networks_demo.py  experiential_memory_demo.py  predictive_coding_demo.py
sandbox/tools/10_8_2025/enactive-consciousness/src/enactive_consciousness/: __init__.py  config.py  continuous_dynamics.py  core.py  dynamic_networks.py  embodiment.py  enactive_coupling.py  experience_retention.py  experiential_memory.py  experiential_memory_corrupted.py  framework.py  information_theory.py  integrated_consciousness.py  jit_utils.py  predictive_coding.py  sparse_representations.py  temporal.py  types.py
sandbox/tools/10_8_2025/enactive-consciousness/src/enactive_consciousness/architecture/: __init__.py  equinox_state_framework.py  state_adapters.py  state_entities.py  state_factory.py  state_interfaces.py  state_use_cases.py
sandbox/tools/10_8_2025/enactive-consciousness/src/enactive_consciousness/domain/: __init__.py  aggregates.py  domain_events.py  domain_services.py  entities.py  repositories.py  specifications.py  value_objects.py
sandbox/tools/10_8_2025/enactive-consciousness/tests/: TDD_IMPLEMENTATION_GUIDE.md  __init__.py  test_advanced_integration_patterns.py  test_circular_causality_state.py  test_continuous_dynamics_comprehensive.py  test_dynamic_networks_comprehensive.py  test_equinox_state_management.py  test_equinox_state_management_corrected.py  test_information_theory_comprehensive.py  test_motor_schema_gru_temporal.py  test_performance_scalability_integration.py  test_predictive_coding_comprehensive.py  test_rnn_integration.py  test_sparse_representations_comprehensive.py  test_system_integration_comprehensive.py
(+541 files in other folders)
